<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_shift_status"
            android:icon="@drawable/ic_shop"
            android:title="@string/shift_status" />
        <item
            android:id="@+id/nav_notice_board"
            android:icon="@drawable/ic_note"
            android:title="@string/notice_board" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/ic_book"
            android:title="@string/terms_and_conditions" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_translate"
            android:title="@string/change_language" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:visible="false"/>
    </group>


</menu>
