<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.foodondoor.delivery.activities.OTP">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/verification_code_txt"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/otp" />

            <TextView
                fontPath="fonts/Nunito-Bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/verification_code_txt"
                android:textSize="20sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:maxLines="2"
                android:text="@string/please_type_the_verification_code" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorAccent" />

            <me.philio.pinentry.PinEntryView
                android:id="@+id/otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="12dp"
                app:accentType="character"
                app:digitBackground="@drawable/otp_square"
                app:digitHeight="40dp"
                app:digitSpacing="10dp"
                app:digitTextColor="@color/colorWhite"
                app:digitTextSize="7sp"
                app:digitWidth="40dp"
                app:mask=""
                app:numDigits="6"
                app:pinInputType="number" />

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorAccent"
                android:text="@string/continu"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

</ScrollView>